Fix Bug 298985 - Log size limit "unlimited" is too small

FIXED-IN: 4.8.4
BUG: 298985